# HireMeBot

./: .gitignore  README.md  main.py  pyproject.toml
config/: prompts.py  settings.py
config/prompts/: __init__.py  conversation_prompts.py  custom_criteria.py.example  job_analysis_prompts.py  required_job_details.py
src/: chat_handler.py  job_analyzer.py  linkedin_client.py  message_store.py  notifier.py
